--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -49,8 +49,8 @@ branches:
 #  - schedule # SK 7/17
 #  - add-build-ui
   - hq-dropdown # sravan 5/7
-  - logos+master # tw
-  - logos # Nick P 5/28
+  # - logos+master # tw
+  # - logos # Nick P 5/28
 #  - subscription-no-contact-info # bb 8/4
   - archive-programs+custom_product_data # tw
   - subscription-no-contact-info # bb 8/4
