--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -59,6 +59,7 @@ branches:
   - revert-4205-revert-3841-86347-2 # Daniel 9/11
   - bulk-app-translate # Noah 9/18
   - reduce-location_ # tw 10/6
+  - archive-location # tw 10/23
   - help-text # j$  10/8 + repeat-hidden-value Daniel 10/10
   - masterlist-workflow # j$  10/8
   - double-management # SK 10/15
