--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -39,7 +39,7 @@ PyYAML==3.10
 raven==3.1.10
 requests==2.0.0
 south==0.7.3
-sorl-thumbnail==11.12
+sorl-thumbnail==11.12.1b
 tropo-webapi-python==0.1.3
 tornado==3.1.1
 xlutils==1.4.1
