--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -43,7 +43,7 @@
 trunk: master
 name: autostaging
 branches:
-  - explicit_case_processing # danny (been here a while, still relevant as of 10/10)
+  - remove-hutch  # DR 10/28
   - double-managment+schedule # SK 10/28
   - schedule # SK 7/17
 #  - add-build-ui
