--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,6 +65,7 @@ branches:
   - bulk-app-translate # Noah 9/18
   - graphing # Nick P 10/27
   - graphing-debugging # Nick P 10/28
+  - share-fixtures # j$ 10/29
   - lwyszomi:ilsgateway-productstock
 submodules:
   submodules/couchlog-src:
