--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -52,7 +52,6 @@ branches:
   # - logos # Nick P 5/28
 #  - subscription-no-contact-info # bb 8/4
   - subscription-no-contact-info # bb 8/4
-  - custom_user_data  # tw+Ethan 9/9
   - lwyszomi:better_date_filters_improvment
   # - lwyszomi:b3-mobile-layout
   - revert-4205-revert-3841-86347-2 # Daniel 9/11
@@ -62,7 +61,9 @@ branches:
   - masterlist-workflow # j$  10/8
   - double-management # SK 10/15
   - revert-4574-revert-4553-case-list-redesign # Noah 9/16
+  - custom_user_date+bulk-app-translate
   - bulk-app-translate # Noah 9/18
+  - custom_user_data  # tw+Ethan 9/9
   - graphing # Nick P 10/27
   - graphing-debugging # Nick P 10/28
   - share-fixtures # j$ 10/29
