--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -45,6 +45,7 @@ name: autostaging
 branches:
   - remove-hutch  # DR 10/28
   - double-managment+schedule # SK 10/28
+  - schedule+bulk-app-translate # Noah 10/30
   - schedule # SK 7/17
 #  - add-build-ui
   - hq-dropdown # sravan 5/7
@@ -61,7 +62,6 @@ branches:
   - masterlist-workflow # j$  10/8
   - double-management # SK 10/15
   - revert-4574-revert-4553-case-list-redesign # Noah 9/16
-  - custom_user_data+bulk-app-translate
   - bulk-app-translate # Noah 9/18
   - custom_user_data  # tw+Ethan 9/9
   - graphing # Nick P 10/27
