--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -60,6 +60,7 @@ branches:
   - archive-location # tw 10/23
   - help-text # j$  10/8 + repeat-hidden-value Daniel 10/10
   - masterlist-workflow # j$  10/8
+  - graphing+double-management # SK 10/31
   - double-management # SK 10/15
   - revert-4574-revert-4553-case-list-redesign # Noah 9/16
   - bulk-app-translate # Noah 9/18
