--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -45,7 +45,6 @@ name: autostaging
 branches:
   - remove-hutch  # DR 10/28
 #  - add-build-ui
-  - hq-dropdown # sravan 5/7
 #  - subscription-no-contact-info # bb 8/4
   - subscription-no-contact-info # bb 8/4
   - lwyszomi:better_date_filters_improvment
@@ -59,12 +58,14 @@ branches:
   - double-management # SK 10/15
   - revert-4574-revert-4553-case-list-redesign # Noah 9/16
   - bulk-app-translate # Noah 9/18
-  - custom_user_data  # tw+Ethan 9/9
   - graphing # Nick P 10/27
   - share-fixtures # j$ 10/29
   - lwyszomi:ilsgateway-productstock
   - autocomplete-case-sharing # Nick P 10/31
   - logos # Nick P 10/31
+  - hq-dropdown+custom_user_data # Noah 11/2
+  - hq-dropdown # sravan 5/7
+  - custom_user_data  # tw+Ethan 9/9
 submodules:
   submodules/couchlog-src:
     branches:
