--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -53,7 +53,7 @@ branches:
   - revert-4205-revert-3841-86347-2 # Daniel 9/11
   - reduce-location_ # tw 10/6
   - archive-location # tw 10/23
-  #- help-text # j$  10/8   removed 11/3 by Daniel
+  - help-text # j$  10/8
   - masterlist-workflow # j$  10/8
   - graphing+double-management # SK 10/3
   - double-management # SK 10/15
@@ -66,7 +66,7 @@ branches:
   - hq-dropdown+custom_user_data # Noah 11/2
   - hq-dropdown # sravan 5/7
   - custom_user_data  # tw+Ethan 9/9
-  - 142623-jstree-upgrade # Daniel 11/3
+  #- 142623-jstree-upgrade # Daniel 11/3
 submodules:
   submodules/couchlog-src:
     branches:
