--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -43,6 +43,7 @@
 trunk: master
 name: autostaging
 branches:
+  - historical-forms  # DR 11/4
   - remove-hutch  # DR 10/28
 #  - add-build-ui
 #  - subscription-no-contact-info # bb 8/4
