--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -67,6 +67,7 @@ branches:
   - 142623-jstree-upgrade # Daniel 11/3
   #- photo-export # J$ 11/4
   - fix-user-indicators # Nick P 11/5
+  - case-detail-tabs # Noah 11/6
 submodules:
   submodules/couchlog-src:
     branches:
