--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -58,6 +58,7 @@ branches:
   - masterlist-workflow # j$  10/8
   - graphing+double-management # SK 10/3
   - double-management+case-detail-tabs2 # Noah 11/6
+  - bulk-app-translate+double-management # SK 11/10
   - double-management # SK 10/15
   - bulk-app-translate # Noah 9/18
   - graphing # Nick P 10/27
