--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -45,7 +45,8 @@ name: autostaging
 branches:
 # this branch didn't exist on github
 #  - bulk-app-translate+double-management # SK 11/10
-  - staging  # Ethan 11/09 - Too many effing merge conflicts
+  - double-management+case-detail-tabs2 # Noah 11/6
+#  - staging  # Ethan 11/09 - Too many effing merge conflicts
   - ptop-reindex  # DR 11/5
   - historical-forms  # DR 11/4
   - remove-hutch  # DR 10/28
@@ -59,7 +60,6 @@ branches:
   #- help-text # j$  10/8  removed 11/3 by Daniel
   - masterlist-workflow # j$  10/8
   - graphing+double-management # SK 10/3
-  - double-management+case-detail-tabs2 # Noah 11/6
   - double-management # SK 10/15
   - bulk-app-translate # Noah 9/18
   - graphing # Nick P 10/27
