--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -47,7 +47,7 @@ branches:
 #  - bulk-app-translate+double-management # SK 11/10
   - double-management+case-detail-tabs # Noah 11/6
 #  - staging  # Ethan 11/09 - Too many effing merge conflicts
-  - ptop-reindex  # DR 11/5
+#  - ptop-reindex  # DR 11/5
   - historical-forms  # DR 11/4
   - remove-hutch  # DR 10/28
 #  - add-build-ui
