--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,11 +65,12 @@ branches:
   - share-fixtures # j$ 10/29
   - logos # Nick P 10/31
   - hq-dropdown # sravan 5/7
-  - 142623-jstree-upgrade # Daniel 11/3
+  # - 142623-jstree-upgrade # Daniel 11/3 11/13 moved to vellum-staging
   # - photo-export # J$ 11/4
   - fix-user-indicators # Nick P 11/5
   - custom-data-choices  # Ethan 11/09
   - export-user # SK 11/13
+  - vellum-staging # J$ 11/13
 submodules:
   submodules/couchlog-src:
     branches:
