--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -46,7 +46,6 @@ branches:
 # this branch didn't exist on github
 #  - bulk-app-translate+double-management # SK 11/10
   - double-management+case-detail-tabs # Noah 11/6
-#  - staging  # Ethan 11/09 - Too many effing merge conflicts
   - ptop-reindex  # DR 11/5
   - historical-forms  # DR 11/4
 #  - add-build-ui
@@ -70,6 +69,7 @@ branches:
   - vellum-staging # J$ 11/13
   - product-app+bulk-app-translate # tw 11/13
   - product-app # tw 11/13
+  - edit-build-messages  # Ethan 11/17
 submodules:
   submodules/couchlog-src:
     branches:
