--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -68,9 +68,8 @@ branches:
   - export-user # SK 11/13
   - vellum-jquery-upgrade # Daniel 11/13
   - vellum-staging # J$ 11/13
-  - product-app+bulk-app-translate # tw 11/13
-  - product-app # tw 11/13
   - edit-build-messages  # Ethan 11/17
+  - locations-for-everyone # tw 11/17
 submodules:
   submodules/couchlog-src:
     branches:
