--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -56,6 +56,7 @@ branches:
   #- help-text # j$  10/8  removed 11/3 by Daniel
   - masterlist-workflow # j$  10/8
   - double-management # SK 10/15
+  - product-app+bulk-app-translate # tw 11/13
   - bulk-app-translate+edit-build-messages  # Ethan 11/17 (trivial)
   - bulk-app-translate # Noah 9/18
   - case-detail-tabs+share-fixtures # Noah 11/15
