--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -71,6 +71,7 @@ branches:
   - product-app+bulk-app-translate # tw 11/13
   - product-app # tw 11/13
   - edit-build-messages  # Ethan 11/17
+  - custom_location_data  # Ethan & tw 11/17
 submodules:
   submodules/couchlog-src:
     branches:
