--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -57,6 +57,7 @@ branches:
   - masterlist-workflow # j$  10/8
   - double-management # SK 10/15
   - bulk-app-translate+edit-build-messages  # Ethan 11/17 (trivial)
+  - bulk-app-translate+logos  # Ethan 11/18
   - bulk-app-translate # Noah 9/18
   - case-detail-tabs+share-fixtures # Noah 11/15
   - case-detail-tabs # Noah 11/6
