--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -62,7 +62,7 @@ branches:
   - case-detail-tabs+share-fixtures # Noah 11/15
   - case-detail-tabs # Noah 11/6
   - share-fixtures # j$ 10/29
-  - logos # Nick P 10/31
+#  - logos # Nick P 10/31
   - hq-dropdown # sravan 5/7
   # - photo-export # J$ 11/4
   - custom-data-choices  # Ethan 11/09
