--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -72,6 +72,7 @@ branches:
   - edit-build-messages  # Ethan 11/17
   - custom_location_data  # Ethan & tw 11/17
   - hq-dropdown+locations-for-everyone # tw 11/18
+  - custom_location_data+locations-for-everyone # tw 11/18
   - locations-for-everyone # tw 11/18
 submodules:
   submodules/couchlog-src:
