--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -45,6 +45,7 @@ name: autostaging
 branches:
 # this branch didn't exist on github
 #  - bulk-app-translate+double-management # SK 11/10
+  - double-management+custom-case-list-pane # Noah 11/24
   - double-management+case-detail-tabs # Noah 11/6
   - historical-forms  # DR 11/4
 #  - add-build-ui
