--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -58,7 +58,7 @@ branches:
   - bulk-app-translate # Noah 9/18
   - case-detail-tabs+share-fixtures # Noah 11/15
   - case-detail-tabs # Noah 11/6
-  - share-fixtures # j$ 10/29
+#  - share-fixtures # j$ 10/29
 #  - logos # Nick P 10/31 (removed by Nick P)
   - hq-dropdown+locations-for-everyone # tw 11/18
   - hq-dropdown # sravan 5/7
