--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -81,6 +81,7 @@ submodules:
       # Danny 8/12. If form validation seems wonky on staging, just remove this
       # - clean-up-api  # removed by cory on nov 25 per above. http://manage.dimagi.com/default.asp?148170
       - update-jar # J$ 11/10
+      - heap-size-fix # Noah 11/26
   submodules/touchforms-src:
     branches:
       - static-tags # Nick P 5/20
