--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -64,8 +64,8 @@ branches:
   - locations-for-everyone # tw 11/18
   - custom-case-list-pane # Noah 11/24
   - system-custom-data  # Ethan 11/24
-  - event-tracking-wrapper # Nick P 11/25
   - quickview # Simon 11/25
+  - fix-form-filtering # Nick P 11/26
 submodules:
   submodules/couchlog-src:
     branches:
