--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -44,6 +44,7 @@ trunk: master
 name: autostaging
 branches:
   - gaTrackLink-rebase
+  - historical-forms  # Danny 12/1
 #  - add-build-ui
 #  - subscription-no-contact-info # bb 8/4
   - subscription-no-contact-info # bb 8/4
