--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -43,6 +43,7 @@
 trunk: master
 name: autostaging
 branches:
+  - refactor-case-list
   - historical-forms  # Danny 12/1
 #  - add-build-ui
 #  - subscription-no-contact-info # bb 8/4
