--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "submodules/bootstrap3_crispy"]
 	path = submodules/bootstrap3_crispy
 	url = https://github.com/dimagi/django-crispy-forms.git
+[submodule "corehq/apps/style/static/style/lib/select2"]
+	path = corehq/apps/style/static/style/lib/select2
+	url = https://github.com/ivaynberg/select2.git
