added angular-ui/select to submodule for style

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "corehq/apps/style/static/style/lib/select2"]
 	path = corehq/apps/style/static/style/lib/select2
 	url = https://github.com/ivaynberg/select2.git
+[submodule "corehq/apps/style/static/style/lib/ui-select"]
+	path = corehq/apps/style/static/style/lib/ui-select
+	url = https://github.com/angular-ui/ui-select.git
