--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ python:
 install:
  - "uname -a"
  - "lsb_release -a"
- - "bash -ex .travis/upgrade-couchdb.sh"
+ - "couchdb -V"
  - "curl http://127.0.0.1:5984/"
+ - "redis-cli ping"
  - "psql -c 'create database pillowtop' -U postgres"
  - "pip install -e ."
  - "pip install coverage coveralls"
