--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -63,6 +63,9 @@ submodules:
   submodules/django-soil-src:
     branches:
       - static-tags # Nick P 5/20
+  submodules/fluff-src:
+    branches:
+      - fluff-src # Nick P 12/8
   submodules/formtranslate-src:
     branches:
       - static-tags # Nick P 5/20
