--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -65,7 +65,7 @@ submodules:
       - static-tags # Nick P 5/20
   submodules/fluff-src:
     branches:
-      - fluff-src # Nick P 12/8
+      - add-datetime # Nick P 12/8
   submodules/formtranslate-src:
     branches:
       - static-tags # Nick P 5/20
