--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -56,6 +56,7 @@ branches:
   - double-management # SK 12/1
   - logo-uploader # Nick P 12/2
   - add-meta-block-data-source # Nick P 12/8
+  - add-datetime-datatype # Nick P 12/8
 submodules:
   submodules/couchlog-src:
     branches:
