--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -43,8 +43,7 @@
 trunk: master
 name: autostaging
 branches:
-  - copy-paste-case-list-property  # Danny 12/8
-  - refactor-case-list
+  - caching-speedups  # Danny 12/11
   - subscription-no-contact-info # bb 8/4
   # - lwyszomi:b3-mobile-layout
   - revert-4205-revert-3841-86347-2 # Daniel 9/11
@@ -73,3 +72,7 @@ submodules:
     branches:
       - debug-yui # Nick P 11/4
       - logos # Nick P 12/2
+  submodules/dimagi-utils:
+    # let's leave this here even when empty
+    # just so we always get latest master
+    branches: []
