--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -54,6 +54,7 @@ branches:
   - double-management # SK 12/1
   - logo-uploader # Nick P 12/2
   - cloudcare-speedup  # cz/sk 12/17
+  - logo-uploader-debug # Nick P 12/17
 submodules:
   corehq/apps/hqmedia/static/hqmedia/MediaUploader:
     branches:
