--- a/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yaml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yaml
@@ -75,11 +75,13 @@
   description: "Upload a file to serve as a logo on Java phones"
   id: "logo_java"
   widget: "image_uploader"
+  toggle: "COMMCARE_LOGO_UPLOADER"
 
 - name: "Logo"
   description: "Upload a file to serve as a logo on Android phones"
   id: "logo_android"
   widget: "image_uploader"
+  toggle: "COMMCARE_LOGO_UPLOADER"
 
 - disabled: true
   name: "Server User Registration"
