--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "corehq/apps/style/static/style/lib/select2"]
 	path = corehq/apps/style/static/style/lib/select2
 	url = https://github.com/ivaynberg/select2.git
+[submodule "corehq/apps/style/static/style/lib/jquery-cookie"]
+	path = corehq/apps/style/static/style/lib/jquery-cookie
+	url = https://github.com/carhartl/jquery-cookie.git
