--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -53,6 +53,7 @@ branches:
   - quickview # Simon 11/25
   - double-management # SK 12/1
   - cloudcare-speedup  # cz/sk 12/17
+  - test-invoice-speed # Nick P 12/24
 submodules:
   corehq/apps/hqmedia/static/hqmedia/MediaUploader:
     branches:
