--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -54,6 +54,7 @@ branches:
   - double-management # SK 12/1
   - cloudcare-speedup  # cz/sk 12/17
   - test-invoice-speed # Nick P 12/24
+  - lwyszomi:migration-optimization
 submodules:
   corehq/apps/hqmedia/static/hqmedia/MediaUploader:
     branches:
