--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -50,6 +50,7 @@ branches:
   - vellum-staging # J$ 11/13
   - custom_location_data  # Ethan & tw 11/17
   - quickview # Simon 11/25
+  - master+double-management # Nick P 12/31
   - double-management # SK 12/1
   - lwyszomi:migration-optimization
 submodules:
