--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -53,6 +53,7 @@ branches:
   - master+double-management # Nick P 12/31
   - double-management # SK 12/1
   - lwyszomi:migration-optimization
+  - caseDetailsInCC # sravan 2/1/15
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
