--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -54,6 +54,7 @@ branches:
   - double-management # SK 12/1
   - lwyszomi:migration-optimization
   - caseDetailsInCC # sravan 2/1/15
+  - track-user-type # Nick P 1/6
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
