--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -56,6 +56,7 @@ branches:
   - lwyszomi:migration-optimization
   - master+caseDetailsInCC  # Nick P 1/7
   - caseDetailsInCC # sravan 2/1/15
+  - lwyszomi:ews_stock_status_report  # cz/kamil 1/13
   - logo-to-android # Nick P 1/7
 submodules:
   submodules/dimagi-utils-src:
