--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -55,6 +55,7 @@ numpy==1.7.1
 six==1.4.1
 socketpool==0.5.2
 markdown==2.2.1
+django-markup-deprecated
 amqp==1.0.13
 amqplib==1.0.2
 sqlagg==0.2.2
