--- a/corehq/apps/reports/tests/readable_forms/mismatched_group_hierarchy.result.yaml
+++ b/corehq/apps/reports/tests/readable_forms/mismatched_group_hierarchy.result.yaml
@@ -1,4 +1,5 @@
 - group: null
+  calculate: null
   label: You first need to log a facility before you can record information.
   options:
   - {label: Go back and exit form, value: exit_form}
@@ -9,6 +10,7 @@
   value: /data/need_facility_trigger
 - children:
   - group: /data/whole_form
+    calculate: null
     label: 'Registering birth at facility: ____ (____)'
     options:
     - {label: 'Yes', value: '1'}
@@ -18,11 +20,12 @@
     tag: select1
     type: Select
     value: /data/current_site_confirm
-  - {group: /data/whole_form, label: Yearly Number, repeat: null, response: '7', tag: input,
+  - {group: /data/whole_form, calculate: null, label: Yearly Number, repeat: null, response: '7', tag: input,
     type: Int, value: /data/fada_yearly_number}
-  - {group: /data/whole_form, label: Monthly Number, repeat: null, response: '36',
+  - {group: /data/whole_form, calculate: null, label: Monthly Number, repeat: null, response: '36',
     tag: input, type: Int, value: /data/fada_monthly_number}
   - group: /data/whole_form
+    calculate: null
     label: "A patient with this ID (____) has already been registered.\_ Are you sure\
       \ the entered information is correct?"
     options:
@@ -33,9 +36,10 @@
     tag: select1
     type: Select
     value: /data/already_registered
-  - {group: /data/whole_form, label: Date of Admission, repeat: null, response: '2014-01-01',
+  - {group: /data/whole_form, calculate: null, label: Date of Admission, repeat: null, response: '2014-01-01',
     tag: input, type: Date, value: /data/fada_date_admission}
   - group: /data/whole_form
+    calculate: null
     label: 'Observation Points Observed:'
     options:
     - {label: '1', value: '1'}
@@ -48,6 +52,7 @@
     type: MSelect
     value: /data/fada_observation_points_observed
   - group: /data/whole_form
+    calculate: null
     label: Was the mother referred out at any point during your observation?
     options:
     - {label: Yes before delivery, value: '2'}
@@ -59,6 +64,7 @@
     type: Select
     value: /data/fada_mother_referred
   - group: /data/whole_form
+    calculate: null
     label: Was there a maternal death at any point during your observation?
     options:
     - {label: 'Yes', value: '1'}
@@ -69,6 +75,7 @@
     type: Select
     value: /data/fada_maternal_death
   - group: /data/whole_form
+    calculate: null
     label: 'Was there a stillbirth or neonatal death any point during your observation? '
     options:
     - {label: 'Yes', value: '1'}
@@ -79,6 +86,7 @@
     type: Select
     value: /data/fada_stillbirth_neonatal_death
   - group: /data/whole_form
+    calculate: null
     label: Was a cesarean section performed?
     options:
     - {label: 'Yes', value: '1'}
@@ -89,6 +97,7 @@
     type: Select
     value: /data/fada_csection
   - group: /data/whole_form
+    calculate: null
     label: Did health care worker assent to observation?
     options:
     - {label: 'Yes', value: '1'}
@@ -100,6 +109,7 @@
     value: /data/fada_healthworker_assent
   - children:
     - group: /data/fada_obv1
+      calculate: null
       label: ' Assisted with woman''s care (check all that apply)'
       options:
       - {label: Doctor, value: '1'}
@@ -112,6 +122,7 @@
       type: MSelect
       value: /data/fada_obv1/fada_assisted_by_obv1
     - group: /data/fada_obv1
+      calculate: null
       label: Maternal temperature obtained?
       options:
       - {label: 'Yes', value: '1'}
@@ -122,6 +133,7 @@
       type: Select
       value: /data/fada_obv1/fada_maternal_temp
     - group: /data/fada_obv1
+      calculate: null
       label: Maternal blood pressure obtained?
       options:
       - {label: 'Yes', value: '1'}
@@ -132,6 +144,7 @@
       type: Select
       value: /data/fada_obv1/fada_maternal_bp
     - group: /data/fada_obv1
+      calculate: null
       label: Was partograph started?
       options:
       - {label: 'Yes', value: '1'}
@@ -142,6 +155,7 @@
       type: Select
       value: /data/fada_obv1/fada_partograph
     - group: /data/fada_obv1
+      calculate: null
       label: Was the paper checklist picked up during care ?
       options:
       - {label: 'Yes', value: '1'}
@@ -152,6 +166,7 @@
       type: Select
       value: /data/fada_obv1/fada_checklist_picked_up_obv1
     - group: /data/fada_obv1
+      calculate: null
       label: Was the paper checklist picked up after the care was given?
       options:
       - {label: 'Yes', value: '1'}
@@ -162,6 +177,7 @@
       type: Select
       value: /data/fada_obv1/fada_checklist_used_after_care_obv1
     - group: /data/fada_obv1
+      calculate: null
       label: Was the checklist poster observed during care?
       options:
       - {label: 'Yes', value: 'yes'}
@@ -172,6 +188,7 @@
       type: Select
       value: /data/fada_obv1/fada_checklist_poster_used_obv1
     - group: /data/fada_obv1
+      calculate: null
       label: Was a birth companion present?
       options:
       - {label: 'Yes', value: '1'}
@@ -182,6 +199,7 @@
       type: Select
       value: /data/fada_obv1/fada_birth_companion_present_obv1
     group: /data/whole_form
+    calculate: null
     label: 1. On Admission
     repeat: null
     response: true
@@ -190,6 +208,7 @@
     value: /data/fada_obv1
   - children:
     - group: /data/fada_obv2
+      calculate: null
       label: ' Assisted with woman''s care (check all that apply)'
       options:
       - {label: Doctor, value: '1'}
@@ -202,6 +221,7 @@
       type: MSelect
       value: /data/fada_obv2/fada_assisted_by_obv2
     - group: /data/fada_obv2
+      calculate: null
       label: Was Oxytocin administered?
       options:
       - {label: 'Yes', value: '1'}
@@ -212,6 +232,7 @@
       type: Select
       value: /data/fada_obv2/fada_oxycotin_administered_obv2
     - group: /data/fada_obv2
+      calculate: null
       label: Where was oxytocin administered?
       options:
       - {label: Intramuscular (IM), value: '1'}
@@ -222,6 +243,7 @@
       type: Select
       value: /data/fada_obv2/fada_oxycotin_administration_location
     - group: /data/fada_obv2
+      calculate: null
       label: "Was water used to clean hands\_ just before delivery?"
       options:
       - {label: 'Yes', value: '1'}
@@ -232,6 +254,7 @@
       type: Select
       value: /data/fada_obv2/fada_water_usage
     - group: /data/fada_obv2
+      calculate: null
       label: Was soap used to clean hands just before delivery?
       options:
       - {label: 'Yes', value: '1'}
@@ -242,6 +265,7 @@
       type: Select
       value: /data/fada_obv2/fada_soap_usage
     - group: /data/fada_obv2
+      calculate: null
       label: Was alcohol rub used just before delivery?
       options:
       - {label: 'Yes', value: '1'}
@@ -252,6 +276,7 @@
       type: Select
       value: /data/fada_obv2/fada_alcohol_rub
     - group: /data/fada_obv2
+      calculate: null
       label: Were clean gloves used at the time of delivery?
       options:
       - {label: 'Yes', value: '1'}
@@ -262,6 +287,7 @@
       type: Select
       value: /data/fada_obv2/fada_clean_gloves
     - group: /data/fada_obv2
+      calculate: null
       label: Was clean towel available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -272,6 +298,7 @@
       type: Select
       value: /data/fada_obv2/fada_clean_towel
     - group: /data/fada_obv2
+      calculate: null
       label: Were sterile scissors/blade to cut cord available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -282,6 +309,7 @@
       type: Select
       value: /data/fada_obv2/fada_scissors_blade
     - group: /data/fada_obv2
+      calculate: null
       label: Was a cord ligature/tie available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -292,6 +320,7 @@
       type: Select
       value: /data/fada_obv2/fada_cord_tie
     - group: /data/fada_obv2
+      calculate: null
       label: Was an aspiration bulb or mucus extractor available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -302,6 +331,7 @@
       type: Select
       value: /data/fada_obv2/fada_mucus_extractor
     - group: /data/fada_obv2
+      calculate: null
       label: Was a neonatal bag and mask available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -312,6 +342,7 @@
       type: Select
       value: /data/fada_obv2/fada_neonatal_bag
     - group: /data/fada_obv2
+      calculate: null
       label: Were pads for the mother available at the bedside?
       options:
       - {label: 'Yes', value: '1'}
@@ -322,6 +353,7 @@
       type: Select
       value: /data/fada_obv2/fada_pads
     - group: /data/fada_obv2
+      calculate: null
       label: Was the paper checklist picked up during care ?
       options:
       - {label: 'Yes', value: '1'}
@@ -332,6 +364,7 @@
       type: Select
       value: /data/fada_obv2/fada_checklist_picked_up_obv2
     - group: /data/fada_obv2
+      calculate: null
       label: Was the paper checklist picked up after the care was given?
       options:
       - {label: 'Yes', value: '1'}
@@ -342,6 +375,7 @@
       type: Select
       value: /data/fada_obv2/fada_checklist_used_after_care_obv2
     - group: /data/fada_obv2
+      calculate: null
       label: Was the checklist poster observed during care?
       options:
       - {label: 'Yes', value: 'yes'}
@@ -352,6 +386,7 @@
       type: Select
       value: /data/fada_obv2/fada_checklist_poster_used_obv2
     group: /data/whole_form
+    calculate: null
     label: 2. Just before delivery
     repeat: null
     response: true
@@ -360,6 +395,7 @@
     value: /data/fada_obv2
   - children:
     - group: /data/fada_obv3
+      calculate: null
       label: Assisted with woman's care (check all that apply)
       options:
       - {label: Doctor, value: '1'}
@@ -372,6 +408,7 @@
       type: MSelect
       value: /data/fada_obv3/fada_assisted_by_obv3
     - group: /data/fada_obv3
+      calculate: null
       label: Was Oxytocin administered?
       options:
       - {label: 'Yes', value: '1'}
@@ -382,6 +419,7 @@
       type: Select
       value: /data/fada_obv3/fada_oxycotin_administered_obv3
     - group: /data/fada_obv3
+      calculate: null
       label: Was neonatal bag and mask used on baby?
       options:
       - {label: 'Yes', value: '1'}
@@ -392,6 +430,7 @@
       type: Select
       value: /data/fada_obv3/fada_neonatal_bag_usage
     - group: /data/fada_obv3
+      calculate: null
       label: Was a birth companion present?
       options:
       - {label: 'Yes', value: '1'}
@@ -402,6 +441,7 @@
       type: Select
       value: /data/fada_obv3/fada_birth_companion_present_obv3
     group: /data/whole_form
+    calculate: null
     label: 3. At one minute after delivery
     repeat: null
     response: true
@@ -410,6 +450,7 @@
     value: /data/fada_obv3
   - children:
     - group: /data/fada_obv4
+      calculate: null
       label: Assisted with woman's care (check all that apply)
       options:
       - {label: Doctor, value: '1'}
@@ -422,6 +463,7 @@
       type: MSelect
       value: /data/fada_obv4/fada_assisted_by_obv4
     - group: /data/fada_obv4
+      calculate: null
       label: Was newborn weight taken?
       options:
       - {label: 'Yes', value: '1'}
@@ -432,6 +474,7 @@
       type: Select
       value: /data/fada_obv4/fada_baby_wt
     - group: /data/fada_obv4
+      calculate: null
       label: Was newborn temperature taken?
       options:
       - {label: 'Yes', value: '1'}
@@ -442,6 +485,7 @@
       type: Select
       value: /data/fada_obv4/fada_baby_temp
     - group: /data/fada_obv4
+      calculate: null
       label: Was baby placed skin-to-skin on mother's abdomen?
       options:
       - {label: 'Yes', value: '1'}
@@ -452,6 +496,7 @@
       type: Select
       value: /data/fada_obv4/fada_baby_skin_to_skin
     - group: /data/fada_obv4
+      calculate: null
       label: Was the baby still skin-to-skin after 1 hour?
       options:
       - {label: 'Yes', value: '1'}
@@ -462,6 +507,7 @@
       type: Select
       value: /data/fada_obv4/fada_baby_skin_to_skin_for_1_hour
     - group: /data/fada_obv4
+      calculate: null
       label: Was breastfeeding initiated?
       options:
       - {label: 'Yes', value: '1'}
@@ -472,6 +518,7 @@
       type: Select
       value: /data/fada_obv4/fada_breastfeeding
     - group: /data/fada_obv4
+      calculate: null
       label: Was the paper checklist picked up during care ?
       options:
       - {label: 'Yes', value: '1'}
@@ -482,6 +529,7 @@
       type: Select
       value: /data/fada_obv4/fada_checklist_picked_up_obv4
     - group: /data/fada_obv4
+      calculate: null
       label: Was the paper checklist picked up after the care was given?
       options:
       - {label: 'Yes', value: '1'}
@@ -492,6 +540,7 @@
       type: Select
       value: /data/fada_obv4/fada_checklist_used_after_care_obv4
     - group: /data/fada_obv4
+      calculate: null
       label: Was the checklist poster observed during care?
       options:
       - {label: 'Yes', value: 'yes'}
@@ -502,6 +551,7 @@
       type: Select
       value: /data/fada_obv4/fada_checklist_poster_used_obv4
     group: /data/whole_form
+    calculate: null
     label: 4. At one hour after delivery
     repeat: null
     response: true
@@ -510,6 +560,7 @@
     value: /data/fada_obv4
   - children:
     - group: /data/fada_other_observations
+      calculate: null
       label: Was maternal temperature obtained at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -520,6 +571,7 @@
       type: Select
       value: /data/fada_other_observations/fada_maternal_temp_anytime
     - group: /data/fada_other_observations
+      calculate: null
       label: Was maternal blood pressure obtained at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -530,6 +582,7 @@
       type: Select
       value: /data/fada_other_observations/fada_maternal_bp_anytime
     - group: /data/fada_other_observations
+      calculate: null
       label: Was magnesium Sulphate given to mother at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -540,6 +593,7 @@
       type: Select
       value: /data/fada_other_observations/fada_magnesium
     - group: /data/fada_other_observations
+      calculate: null
       label: Was antibiotics given to mother at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -550,6 +604,7 @@
       type: Select
       value: /data/fada_other_observations/fada_ab_mother
     - group: /data/fada_other_observations
+      calculate: null
       label: Was antibiotics given to baby at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -560,6 +615,7 @@
       type: Select
       value: /data/fada_other_observations/fada_ab_baby
     - group: /data/fada_other_observations
+      calculate: null
       label: Was antiretroviral to mother at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -570,6 +626,7 @@
       type: Select
       value: /data/fada_other_observations/fada_arv_mother
     - group: /data/fada_other_observations
+      calculate: null
       label: Was antiretroviral to baby at any time?
       options:
       - {label: 'Yes', value: '1'}
@@ -580,6 +637,7 @@
       type: Select
       value: /data/fada_other_observations/fada_arv_baby
     group: /data/whole_form
+    calculate: null
     label: 5.Were any of the following observed at any time?
     repeat: null
     response: true
@@ -587,6 +645,7 @@
     type: FieldList
     value: /data/fada_other_observations
   - group: /data/whole_form
+    calculate: null
     label: Would you like to highlight this record for your team leader?
     options:
     - {label: 1. Yes, value: 'yes'}
@@ -596,26 +655,33 @@
     tag: select1
     type: Select
     value: /data/fada_highlight_record
-  - {group: /data/whole_form, label: Comment to supervisor, repeat: null, response: null,
+  - {group: /data/whole_form, calculate: null, label: Comment to supervisor, repeat: null, response: null,
     tag: input, type: Text, value: /data/fada_highlight_comment}
-  - {group: /data/whole_form, label: GPS Capture, repeat: null, response: 8.8888888
+  - {group: /data/whole_form, calculate: null, label: GPS Capture, repeat: null, response: 8.8888888
       -9.9999999 0.0 30.000, tag: input, type: Geopoint, value: /data/fada_gps_location}
   group: null
+  calculate: null
   label: ''
   repeat: null
   response: true
   tag: group
   type: Group
   value: /data/whole_form
-- {group: null, label: fada_facility_id, repeat: null, response: '600', tag: hidden,
+- {group: null, calculate: "instance('casedb')/casedb/case[@case_type='current_user_data']/facility_id",
+  label: fada_facility_id, repeat: null, response: '600', tag: hidden,
   type: DataBindOnly, value: /data/fada_facility_id}
-- {group: null, label: fada_patient_id, repeat: null, response: '2093402934', tag: hidden,
+- {group: null, calculate: "concat(/data/fada_facility_id, format-date(/data/fada_date_admission, '%Y%m'), /data/patient_number_padded)",
+  label: fada_patient_id, repeat: null, response: '2093402934', tag: hidden,
   type: DataBindOnly, value: /data/fada_patient_id}
-- {group: null, label: facility_number_usage, repeat: null, response: '1', tag: hidden,
+- {group: null, calculate: "instance('casedb')/casedb/case[@case_type='facility'][@status='open'][facility_id = /data/fada_facility_id]/number_usage",
+  label: facility_number_usage, repeat: null, response: '1', tag: hidden,
   type: DataBindOnly, value: /data/facility_number_usage}
-- {group: null, label: patient_number, repeat: null, response: '1234', tag: hidden,
+- {group: null, calculate: "if(/data/facility_number_usage = 1, /data/fada_monthly_number, /data/fada_yearly_number)",
+  label: patient_number, repeat: null, response: '1234', tag: hidden,
   type: DataBindOnly, value: /data/patient_number}
-- {group: null, label: patient_number_padded, repeat: null, response: '01225', tag: hidden,
+- {group: null, calculate: "if(/data/patient_number >= 10000, string(/data/patient_number), if(/data/patient_number >= 1000, concat('0', string(/data/patient_number)), if(/data/patient_number >= 100, concat('00', string(/data/patient_number)), if(/data/patient_number >= 10, concat('000', string(/data/patient_number)), concat('0000', string(/data/patient_number))))))",
+  label: patient_number_padded, repeat: null, response: '01225', tag: hidden,
   type: DataBindOnly, value: /data/patient_number_padded}
-- {group: null, label: facility_owner_id, repeat: null, response: '', tag: hidden,
+- {group: null, calculate: "instance('casedb')/casedb/case[@case_type='facility'][@status='open'][facility_id = /data/fada_facility_id]/owner_id",
+  label: facility_owner_id, repeat: null, response: '', tag: hidden,
   type: DataBindOnly, value: /data/facility_owner_id}
