--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -51,7 +51,7 @@ branches:
   - quickview # Simon 11/25
 #  - master+double-management # Nick P 12/31
 #  - double-management # SK 12/1
-  - ews_stock_status_report  # cz/kamil 1/13
+  - lwyszomi:reporting_rates_report  # cz/kamil 1/13
   - caseDetailsInCC # sravan 2/1/15
   - logo-to-android # Nick P 1/7
   - locations-as-groups # tw 1/20
