Don't try to commit peoples local transifex config

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ app_builder_live_test/*/
 dump.rdb
 **/less/*.css
 /staticmedia*
+.transifexrc
 
 submodules/formdesigner
 submodules/vellum/Vellum
