--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -59,4 +59,9 @@ submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
     # just so we always get latest master
-    branches: []
+    branches:
+      - get_url_base
+  submodules/couchlog-src:
+    branches:
+      - get_url_base
+
