--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -53,8 +53,9 @@ branches:
 #  - master+double-management # Nick P 12/31
 #  - double-management # SK 12/1
   - caseDetailsInCC # sravan 2/1/15
-  - locations-as-groups # tw 1/20
   - vellum-model-iteration # daniel 1/22
+  - locations-as-groups+fixtures-spike  # cz 1/29
+  - locations-as-groups # tw 1/20
   - fixtures-spike  # cz 1/29
 submodules:
   submodules/dimagi-utils-src:
