--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -61,4 +61,5 @@ submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
     # just so we always get latest master
-    branches:[]
+    branches:
+    - master
