--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -52,12 +52,12 @@ branches:
   - quickview # Simon 11/25
 #  - master+double-management # Nick P 12/31
 #  - double-management # SK 12/1
-  - caseDetailsInCC # sravan 2/1/15
   - vellum-model-iteration # daniel 1/22
   - locations-as-groups+fixtures-spike  # cz 1/29
   - locations-as-groups # tw 1/20
   - fixtures-spike  # cz 1/29
   - killmemcached  # sk 1/29
+  - project-settings-update # sravan 1/30
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
