--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -43,8 +43,7 @@
 trunk: master
 name: autostaging
 branches:
-  - locations-as-groups+email-report-urls  # Danny 1/28
-  - email-report-urls  # Danny 1/28
+  - fab-inventory  # Danny 1/30
   - subscription-no-contact-info # bb 8/4
   # - lwyszomi:b3-mobile-layout
   - revert-4205-revert-3841-86347-2 # Daniel 9/11
