add Amplifies Workers setting

--- a/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yaml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yaml
@@ -73,6 +73,7 @@
     - properties.log_prop_daily  # Daily Log Sending Frequency
     - hq.secure_submissions
     - hq.translation_strategy
+    - hq.amplifies_workers
 
 - title: 'Disabled'
   id: app-settings-disabled
