add Amplifies Project setting

--- a/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yaml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-settings-layout.yaml
@@ -74,6 +74,7 @@
     - hq.secure_submissions
     - hq.translation_strategy
     - hq.amplifies_workers
+    - hq.amplifies_project
 
 - title: 'Disabled'
   id: app-settings-disabled
