--- a/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yaml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yaml
@@ -167,3 +167,14 @@
    - 'Not Set'
   default: 'not_set'
   preview: true
+
+- id: amplifies_project
+  name: 'Amplifies Project'
+  description: 'Amplifies the impact of a Frontline Program (FLP). Examples: programs that use M&E data collected by CommCare. Programs that use CommCare data to make programmatic decisions.'
+  values: ['yes', 'no', 'not_set']
+  value_names:
+   - 'Yes'
+   - 'No'
+   - 'Not Set'
+  default: 'not_set'
+  preview: true
