--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -57,6 +57,7 @@ branches:
   - fixtures-spike  # cz 1/29
   - killmemcached  # sk 1/29
   - project-settings-update # sravan 1/30
+  - tdh-tiles # Noah 2/1
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
